--- a/Sample/Sample/Info.plist
+++ b/Sample/Sample/Info.plist
@@ -30,6 +30,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>It is used to manipulate the hardware.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>It is used to manipulate the hardware.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
